@@ -200,6 +200,7 @@ sp-chloropropanol=Chloropropanol
 sp-chlorotriethylamine=Chlorotriethylamine
 sp-chronomatter=Chronomatter
 sp-cold-coolant=Cold coolant
+sp-croygenic-gel=Croygenic gel
 sp-cumene-hydroperoxide=Cumene hydroperoxide
 sp-cyanogen=Cyanogen
 sp-dark-energy=Dark energy
@@ -245,6 +246,7 @@ sp-helium=Helium
 sp-helium-3=Helium 3
 sp-heptadecafluoro-1-iodooctane=Heptadecafluoro 1 iodooctane
 sp-hexachloroiridium-acid-solution=Hexachloroiridium acid solution
+sp-high-density-structure-gel=High density structure gel
 sp-hydrazine=Hydrazine
 sp-hydrobromic-acid=Hydrobromic acid
 sp-hydrogen=Hydrogen
@@ -361,6 +363,7 @@ sp-basic-agriculture=Basic agriculture
 sp-basic-science=Basic science
 sp-beta-minus-decay-research=β- decay research
 sp-beta-plus-decay-research=β+ decay research
+sp-biological=Biological
 sp-blank-science-item=Blank science item
 sp-casting-alloy=Casting alloy
 sp-casting-mechanical-component=Casting mechanical component
@@ -496,6 +499,8 @@ sp-big-electric-engine-unit=Big electric engine unit
 sp-bio-capacitor=Bio capacitor
 sp-bio-fuel=Bio fuel
 sp-bio-pesticide=Bio pesticide
+sp-bio-polymer-mesh=Bio polymer mesh
+sp-bio-sample-cryovial=Bio sample cryovial
 sp-biochip=Biochip
 sp-biological-science-pack=Biological science pack
 sp-biological-science-pack-3=Biological science pack 3
@@ -608,6 +613,8 @@ sp-crushed-zinc-ore=Crushed zinc ore
 sp-crushed-zirconium-ore=Crushed zirconium ore
 sp-cryogenic-science-pack=Cryogenic science pack
 sp-cryogenic-science-pack-3=Cryogenic science pack 3
+sp-cryostabalized-ruthenium=Cryostabalized ruthenium
+sp-cryostabalized-tungsten=Cryostabalized tungsten
 sp-cryostat=Cryostat
 sp-crystallizer=Crystallizer
 sp-cubit=Cubit
@@ -679,6 +686,7 @@ sp-fabric=Fabric
 sp-femto-navigator=Femto navigator
 sp-fermium-condensate=Fermium condensate
 sp-ferrite=Ferrite
+sp-fiberglass=Fiberglass
 sp-filter=Filter
 sp-flange=Flange
 sp-flux-capacitor=Flux capacitor
@@ -833,6 +841,7 @@ sp-laser=Laser
 sp-laser-diode=Laser diode
 sp-lead-molybdate=Lead molybdate
 sp-lead-slab=Lead slab
+sp-lead-telluride=Lead telluride
 sp-leadstone=Leadstone
 sp-leaf=Leaf
 sp-lens=Lens
@@ -1017,6 +1026,8 @@ sp-quartz=Quartz
 sp-quasicrystal=Quasicrystal
 sp-radiant-glass=Radiant glass
 sp-radiation-channeler=Radiation channeler
+sp-radioisotope-casing=Radioisotope casing
+sp-radioisotope-thermoelectric-generator=Radioisotope thermoelectric generator
 sp-radium=Radium
 sp-radium-221=Radium-221
 sp-radium-225=Radium-225
@@ -1267,6 +1278,7 @@ sp-atom-smashing=Atom smashing
 sp-black-hole-forging=Black hole forging
 sp-blunagium-rocket-building=Blunagium rocket building
 sp-chemical-staging=Chemical staging
+sp-crafting-with-two-fluids=Crafting with two fluids
 sp-crushed-smelting=Crushed smelting
 sp-crushing-washing=Crushing washing
 sp-crystallizing=Crystallizing
@@ -1287,6 +1299,7 @@ sp-intermediate-smelting=Intermediate smelting
 sp-ion-chromatography=Ion chromatography
 sp-kr-advanced-smelting=Advanced smelting
 sp-kr-atmosphere-condensation=Atmosphere condensation
+sp-kr-bio-processing=Bio processing
 sp-kr-bioprocessing=Bioprocessing
 sp-kr-electrolysis=Electrolysis
 sp-kr-fluid-filtration=Fluid filtration
@@ -1422,6 +1435,8 @@ sp-big-electric-engine-unit=Big electric engine unit
 sp-bio-capacitor=Bio capacitor
 sp-bio-fuel=Bio fuel
 sp-bio-pesticide=Bio pesticide
+sp-bio-polymer-mesh=Bio polymer mesh
+sp-bio-sample-cryovial=Bio sample cryovial
 sp-biochip=Biochip
 sp-biocrude-oil=Biocrude oil
 sp-biological-science-pack=Biological science pack
@@ -1566,6 +1581,7 @@ sp-copper-ore-from-acrocrystal=Copper ore from acrocrystal
 sp-copper-plate-from-enriched-copper=Copper plate from enriched copper
 sp-copper-tube=Copper tube
 sp-core-extractor=Core extractor
+sp-croygenic-gel=Croygenic gel
 sp-crucible=Crucible
 sp-crushed-aluminum-smelting=Crushed aluminum smelting
 sp-crushed-chromite-smelting=Crushed chromite smelting
@@ -1611,6 +1627,8 @@ sp-crushing-tungsten-ore=Crushing tungsten ore
 sp-crushing-zinc-ore=Crushing zinc ore
 sp-crushing-zirconium-ore=Crushing zirconium ore
 sp-cryogenic-science-pack=Cryogenic science pack
+sp-cryostabalized-ruthenium=Cryostabalized ruthenium
+sp-cryostabalized-tungsten=Cryostabalized tungsten
 sp-cryostat=Cryostat
 sp-crystallize-lava=Crystallize lava
 sp-crystallize-ultramafic-lava=Crystallize ultramafic lava
@@ -1733,6 +1751,7 @@ sp-femto-navigator=Femto navigator
 sp-fermium-condensate=Fermium condensate
 sp-ferrite=Ferrite
 sp-ferrite-with-cobalt=Ferrite with cobalt
+sp-fiberglass=Fiberglass
 sp-filter=Filter
 sp-flange=Flange
 sp-fluorine-from-acrovoid=Fluorine from acrovoid
@@ -1808,6 +1827,7 @@ sp-helium-from-atmosphere=Helium from atmosphere
 sp-heptadecafluoro-1-iodooctane=Heptadecafluoro-1-iodooctane
 sp-herbarium=Herbarium
 sp-hexachloroiridium-acid-solution=Hexachloroiridium acid solution
+sp-high-density-structure-gel=High density structure gel
 sp-high-power-solenoid=High power solenoid
 sp-high-pressure-fan=High pressure fan
 sp-high-pressure-tank=High pressure tank
@@ -1937,6 +1957,7 @@ sp-laser=Laser
 sp-laser-diode=Laser diode
 sp-lead-molybdate=Lead molybdate
 sp-lead-slab=Lead slab
+sp-lead-telluride=Lead telluride
 sp-leadstone-from-acrovoid=Leadstone from acrovoid
 sp-leaf=Leaf
 sp-lens=Lens
@@ -2179,6 +2200,8 @@ sp-quasicrystal-1=Quasicrystal 1
 sp-quasicrystal-2=Quasicrystal 2
 sp-radiant-glass=Radiant glass
 sp-radiation-channeler=Radiation channeler
+sp-radioisotope-casing=Radioisotope casing
+sp-radioisotope-thermoelectric-generator=Radioisotope thermoelectric generator
 sp-rare-metals-alloy-from-cerium=Rare metals alloy from cerium
 sp-rare-metals-alloy-from-lanthanum=Rare metals alloy from lanthanum
 sp-rare-metals-alloy-from-neodymium=Rare metals alloy from neodymium
@@ -2526,6 +2549,7 @@ sp-big-crusher=Big crusher
 sp-big-electric-engine-unit=Big electric engine unit
 sp-bigger-fluid-tanks=Bigger fluid tanks
 sp-bio-pesticide=Bio pesticide
+sp-bio-sample-cryovial=Bio sample cryovial
 sp-biological-science-pack=Biological science pack
 sp-biomass=Biomass
 sp-bis-2-ethylhexyl-phosphoric-acid=Bis 2 ethylhexyl phosphoric acid
@@ -2565,6 +2589,7 @@ sp-copper-extruding=Copper extruding
 sp-core-extractor=Core extractor
 sp-crusher=Crusher
 sp-cryogenic-science-pack=Cryogenic science pack
+sp-cryostabalized-alloys=Cryostabalized alloys
 sp-crystal-growing=Crystal growing
 sp-crystallizer=Crystallizer
 sp-cybernetics=Cybernetics
@@ -2734,6 +2759,7 @@ sp-quantum-realm=Quantum realm
 sp-quantum-realm-stabilization=Quantum realm stabilization
 sp-quantum-stabilizer=Quantum stabilizer
 sp-quantum-tech=Quantum tech
+sp-radioisotope-thermoelectric-generator=Radioisotope thermoelectric generator
 sp-radon=Radon
 sp-rare-metals=Rare metals
 sp-raw-resource-from-acrocrystal=Raw resource from acrocrystal
