@@ -1,9 +1,13 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.26
 Date: 2025-08-01
+  Features:
+    - Added recipe chains for biolab
+    - Added additional cargo landing pad technology
   Bugfixes:
     - Fixed some icons
     - Fixed some tech tree dependancies
+    - Biolab is now unlocked before automation science pack 3
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.25
 Date: 2025-07-25
